Fixing FAB z-index and truncating localStorage images on page refresh. Turns out that you want to invalidate that cache or the page will always be maxed out on image count.

--- a/src/components/views/images.view.scss
+++ b/src/components/views/images.view.scss
@@ -13,4 +13,5 @@
   position: fixed !important;
   right: 2rem;
   bottom: 2rem;
+  z-index: 10;
 }
